feat: implement cost page

--- a/src/css/common/footer.scss
+++ b/src/css/common/footer.scss
@@ -19,17 +19,17 @@
 
 .footer__txt {
   margin-right: 1.6rem;
-  color: $color-tertiary-omega;
 }
 
 .footer__btn {
-  color: $color-tertiary-omega;
+  color: $color-primary-gamma;
 
-  border-bottom: 1px solid $color-tertiary-omega;
+  border-bottom: 1px solid $color-primary-gamma;
 
-  transition: color 0.1s linear;
+  transition: color 0.1s linear, border-color 0.1s linear;
 
   &:hover {
-    color: darken($color-tertiary-omega, 30);
+    color: lighten($color-primary-gamma, 10);
+    border-color: lighten($color-primary-gamma, 10);
   }
 }
