--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -17,9 +17,10 @@ $color-secondary-psi: #4d7eff;
 $color-secondary-omega: #e5e5e5;
 
 $color-tertiary-beta: #f1f1f1;
+$color-tertiary-gamma: #3e3e3e;
 $color-tertiary-omega: #999;
 
-$color-quaternary-beta: #fbfbfb;
+$color-quaternary-beta: #eaeaea;
 
 // Fonts
 $font-primary: 'Museo', sans-serif;
