--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,9 +1,11 @@
+include ../includes/index/mixins
+
 header.header
   h1.header__title Олд Траффорд - Бухгалтерские услуги
   .header__top.container
     nav.header__menu
       ul
-        li: a.active(href="index.html") Главная
+        li: a(href="index.html") Главная
         li: a(href="about.html") О нас
         li: a(href="services.html") Услуги
         li: a(href="cost.html") Стоимость
