--- a/src/pages/includes/index/mixins.pug
+++ b/src/pages/includes/index/mixins.pug
@@ -10,15 +10,15 @@ mixin callbackBtn
 
 mixin location(isLocationIcon= true, isMetroIconLarge = false)
   .location
-    a.location__address(href="https://yandex.ru/maps/?um=constructor%3A2a696978720ea53ebd9e73ad180c28869d75ec04b1c62260721b4917e3c98ebd&source=constructorLink" target="_blank")
+    a.location__address(href="https://yandex.ru/maps/?um=constructor%3A2a696978720ea53ebd9e73ad180c28869d75ec04b1c62260721b4917e3c98ebd&source=constructorLink" rel="noreferrer" target="_blank")
       if isLocationIcon
         +icon('location__icon icon', 'location')
       p Минск, ул. Энгельса, дом 34, офис 305
     .location__metro
       if isMetroIconLarge
-        img.location__icon.icon.icon--large(src="../../images/index/header/metro-lg.png", alt="")
+        img.location__icon.icon.icon--large(src="images/index/header/metro-lg.png", alt="")
       else
-        img.location__icon.icon(src="../../images/index/header/metro.png", alt="")
+        img.location__icon.icon(src="images/index/header/metro.png", alt="")
       .location__metro-item
         p Октябрьская
         p Купаловская
@@ -51,7 +51,7 @@ mixin plusesItem(txt)
 mixin feeItem(link, img, num, txt)
   a.fee__item(href= link)
     .fee__img-wrapper
-      img.fee__img(src=`../../images/index/fee/${img}`, alt="")
+      img.fee__img(src=`images/index/fee/${img}`, alt="")
     .fee__title-wrapper
       span.fee__num= num
       h3.fee__title= txt
@@ -63,7 +63,7 @@ mixin featuresItem(icon, title, txt)
     p.features__item-txt= txt
 
 mixin clientsItem(img)
-  img.clients__item(src=`../../images/index/clients/${img}`, alt="")
+  img.clients__item(src=`images/index/clients/${img}`, alt="")
 
 mixin workItem(icon, num, txt)
   .work__item
