--- a/src/css/common/global.scss
+++ b/src/css/common/global.scss
@@ -151,3 +151,11 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.page {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  min-height: 100vh;
+}
