--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -21,6 +21,10 @@ $color-tertiary-gamma: #3e3e3e;
 $color-tertiary-omega: #999;
 
 $color-quaternary-beta: #eaeaea;
+$color-quaternary-omega: #a3a3a3;
+
+$color-form-error: #d4251f;
+$color-form-success: #39eca2cc;
 
 // Fonts
 $font-primary: 'Museo', sans-serif;
