--- a/src/pages/cost.pug
+++ b/src/pages/cost.pug
@@ -3,41 +3,42 @@ extends common/layout
 include includes/cost/mixins
 
 block title
-  title Олд Траффорд - Стоимость
+  title ООО ОлдТраффорд - Стоимость
 
 block content
   main
     //Cost
     section.cost
-      +crumbs([{href: 'cost', name: 'Стоимость'}])
-      +titlePage('Стоимость услуг')
-      +remark('Стоимость формируется для каждого Клиента индивидуально в зависимости от объема документооборота, количества банковских операций, набора бухгалтерских услуг, штата, наличия ВЭД сделок')
-      .cost__inner.container
-        +costBlock('Сопровождение бухгалтерского учёта', [
-          {service: '"Нулевая отчетность" (подготовка)', price: '180'},
-          {service: '"Нулевой баланс" (подготовка и сдача в ИМНС, фонды)', price: '350'},
-          {service: '"Нулевая отчетность" (подготовка)', price: 'от 250'},
-          {service: 'Экспертиза состояния бухгалтерской, налоговой и статистической отчетности', price: 'от 250'},
-          {service: 'Восстановление бухгалтерского учета и/или налогового учета (за 1 месяц восстановления)', price: 'от 300'},
-        ])
-        +costBlock('Бухгалтерское обслуживание на основании первичной документации', [
-          {service: 'до 10 первичных документов в месяц', price: 'от 250.00'},
-          {service: 'от 10 до 25 первичных документов в месяц', price: 'от 350.00'},
-          {service: 'от 10 до 50 первичных документов в месяц', price: 'от 520.00'},
-          {service: 'от 50 до 100 первичных документов в месяц', price: 'от 680.00'},
-          {service: 'свыше 100 первичных документов в месяц', price: 'цена договорная'},
-          {service: 'Начисление заработной платы и налогов от фонда оплаты труда с подгототовкой и сдачей всей необходимой отчетности (кроме персонифицированного учета) на 1 сотрудника', price: '25.00'},
-        ])
-        +costBlock('Дополнительные бухгалтерские услуги', [
-          {service: 'Разработка учетной и налоговой политики с учетом специфики Вашего предприятия', price: '300.00'},
-          {service: 'Составление годового баланса с приложениями, пояснительной записки	', price: 'от 700.00'},
-          {service: 'Консультация 1 час (*)', price: '45.00'},
-          {service: 'Подготовка пакета документов для открытия расчетного счета, оформление карт-счетов работников', price: '35.00'},
-          {service: 'Квартальный годовой баланс (на основании данных заказчика без проверки)', price: '250.00'},
-        ])
-        +costBlock('Составление статистической отчетности', [
-          {service: 'Каждая форма', price: 'от 40'},
-          {service: 'Составление квартальных годовых отчетов (на основании предоставленных документов без проверки)', price: 'от 44'},
-        ])
+      .container
+        +crumbs([{href: 'cost', name: 'Стоимость'}])
+        +titlePage('Стоимость услуг')
+        +remark('Стоимость формируется для каждого Клиента индивидуально в зависимости от объема документооборота, количества банковских операций, набора бухгалтерских услуг, штата, наличия ВЭД сделок')
+        .cost__inner
+          +costBlock('Сопровождение бухгалтерского учёта', [
+            {service: '"Нулевая отчетность" (подготовка)', price: '180'},
+            {service: '"Нулевой баланс" (подготовка и сдача в ИМНС, фонды)', price: '350'},
+            {service: '"Нулевая отчетность" (подготовка)', price: 'от 250'},
+            {service: 'Экспертиза состояния бухгалтерской, налоговой и статистической отчетности', price: 'от 250'},
+            {service: 'Восстановление бухгалтерского учета и/или налогового учета (за 1 месяц восстановления)', price: 'от 300'},
+          ])
+          +costBlock('Бухгалтерское обслуживание на основании первичной документации', [
+            {service: 'до 10 первичных документов в месяц', price: 'от 250.00'},
+            {service: 'от 10 до 25 первичных документов в месяц', price: 'от 350.00'},
+            {service: 'от 10 до 50 первичных документов в месяц', price: 'от 520.00'},
+            {service: 'от 50 до 100 первичных документов в месяц', price: 'от 680.00'},
+            {service: 'свыше 100 первичных документов в месяц', price: 'цена договорная'},
+            {service: 'Начисление заработной платы и налогов от фонда оплаты труда с подгототовкой и сдачей всей необходимой отчетности (кроме персонифицированного учета) на 1 сотрудника', price: '25.00'},
+          ])
+          +costBlock('Дополнительные бухгалтерские услуги', [
+            {service: 'Разработка учетной и налоговой политики с учетом специфики Вашего предприятия', price: '300.00'},
+            {service: 'Составление годового баланса с приложениями, пояснительной записки	', price: 'от 700.00'},
+            {service: 'Консультация 1 час (*)', price: '45.00'},
+            {service: 'Подготовка пакета документов для открытия расчетного счета, оформление карт-счетов работников', price: '35.00'},
+            {service: 'Квартальный годовой баланс (на основании данных заказчика без проверки)', price: '250.00'},
+          ])
+          +costBlock('Составление статистической отчетности', [
+            {service: 'Каждая форма', price: 'от 40'},
+            {service: 'Составление квартальных годовых отчетов (на основании предоставленных документов без проверки)', price: 'от 44'},
+          ])
     //Consult
     +consult
