--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -1,6 +1,21 @@
 mixin icon(className, name)
   svg(class= className): use(xlink:href="images/sprite.svg#" + name)
 
+mixin location(isLocationIcon= true, isMetroIconLarge = false)
+  .location
+    a.location__address(href="https://yandex.ru/maps/?um=constructor%3A2a696978720ea53ebd9e73ad180c28869d75ec04b1c62260721b4917e3c98ebd&source=constructorLink" rel="noreferrer" target="_blank")
+      if isLocationIcon
+        +icon('location__icon icon', 'location')
+      p Минск, ул. Энгельса, дом 34, офис 305
+    .location__metro
+      if isMetroIconLarge
+        img.location__icon.icon.icon--large(src="images/index/header/metro-lg.png", alt="")
+      else
+        img.location__icon.icon(src="images/index/header/metro.png", alt="")
+      .location__metro-item
+        p Октябрьская
+        p Купаловская
+
 mixin phones
   .phones
     a.phones__item(href="tel:+375173920279")
@@ -23,15 +38,15 @@ mixin consult
       +phones
 
 mixin crumbs(arrLinks)
-  nav.crumbs.container
+  nav.crumbs
     ul
       li: a(href='index.html') Главная
       for link in arrLinks
         li: a(href=`${link.href}.html`)= link.name
 
 mixin titlePage(title)
-  h2.title-page.container= title
+  h2.title-page= title
 
 mixin remark(remark)
-  .remark.container
+  .remark
     p.remark__txt= remark
