--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -32,3 +32,7 @@
 @import 'index/map';
 
 @import 'cost/cost';
+
+@import 'service-law/about';
+@import 'service-law/form';
+@import 'service-law/contacts';
