feat: implement service-repair page

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,6 +15,7 @@
 @import 'common/includes/consult';
 @import 'common/includes/icon';
 @import 'common/includes/title-page';
+@import 'common/includes/descrip-page';
 @import 'common/includes/crumbs';
 @import 'common/includes/remark';
 
@@ -36,3 +37,5 @@
 @import 'service-law/about';
 @import 'service-law/form';
 @import 'service-law/contacts';
+
+@import 'service-repair/repair';
