--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -62,7 +62,7 @@ block content
       +feeItem('#', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
 
     //Consult
-    +consult
+    +consult('Нужна консультация?', 'Оставьте свою заявку и мы ответим на все ваши вопросы.')
 
     //Company
     section.company(style="background-image: url(images/index/company/bg.jpg)")
