--- a/src/css/service-law/form.scss
+++ b/src/css/service-law/form.scss
@@ -115,8 +115,10 @@
 }
 
 .law__form-icon {
-  width: 18px;
-  height: 18px;
+  min-width: 18px;
+  max-width: 18px;
+  min-height: 18px;
+  max-height: 18px;
 
   margin-right: 2.3rem;
 }
