--- a/src/css/index/features.scss
+++ b/src/css/index/features.scss
@@ -2,7 +2,7 @@
   padding: 8.2rem 0 10.4rem;
 }
 
-.features__inner {
+.features__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
