--- a/src/css/index/provider.scss
+++ b/src/css/index/provider.scss
@@ -10,7 +10,7 @@
   font-family: $font-secondary;
 }
 
-.provider__inner {
+.provider__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
