--- a/src/pages/includes/cost/mixins.pug
+++ b/src/pages/includes/cost/mixins.pug
@@ -1,8 +1,9 @@
 mixin costBlock(title, arrItems)
   .cost__block
     .cost__title= title
-    for item in arrItems
-      .cost__item
-        p.cost__txt= item.service
-        .cost__decorator
-        p.cost__price= item.price
+    ul
+      for item in arrItems
+        li.cost__item
+          p.cost__txt= item.service
+          .cost__decorator
+          p.cost__price= item.price
