--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -18,7 +18,7 @@ block content
     section.descrip
       .container
         h2.descrip__title Аутсорсинг бухгалтерии с ООО &laquo;ОлдТраффорд&raquo; это
-        .descrip__inner
+        ul.descrip__list
           +descripItem(['Выгодно', 'Экономия до 57%'], 'benefit', ['Повышение рентабельности любого бизнеса, так или иначе, затрагивает минимизацию затрат. Любому предпринимателю важно снизить себестоимость продукции или услуг, где не последнее место в списке расходов занимают затраты на содержание административного персонала, в том числе и  бухгалтерии.', 'Сотрудничество с нами снизит расходы Вашей компании за счет отсутствия:'], ['выплат заработной платы сотрудникам, налоговых и иных обязательных отчислений;', 'расходов на организацию рабочих мест (закупку оргтехники, мебели, расходных материалов);', 'затрат на содержание отдельной офисной площади и оплаты коммунальных услуг, услуг связи;', 'расходов на повышение квалификации и мотивации персонала;', 'оплаты за  установку и регулярного обновления современного программного обеспечения.'])
           +descripItem(['Гарантии', 'до 50 000 BYN'], 'warranty', ['В нашей компании выстроена строгая система контроля качества бухгалтерского и налогового учета, благодаря чему риск ошибок и неточностей в процессе оказания бухгалтерских услуг и подготовки отчетности в государственные органы сводится к минимуму.', 'Но мы гарантируем не только качественный результат, но и несем материальную ответственность перед каждым клиентом. Защита клиента от непредвиденных затрат осуществляется путем добровольного страхования нами профессиональной ответственности (от ошибок и упущений, совершенных или допущенных страхователем, которые будут установлены компетентными органами или вступившим в силу решением суда).', 'Агрегатный лимит ответственности составляет 50 000 BYN (пятьдесят тысяч белорусских рублей) на один страховой случай, а также 5 000 BYN (пять тысяч белорусских рублей) на возмещение судебных расходов.'])
           +descripItem(['Качество и', 'профессионализм'], 'quality', ['Запросы бизнеса разнообразны, никогда не знаешь, с чем компания столкнется завтра, а только комплексный подход к планированию и учету позволяет снизить налоговую нагрузку за счет грамотной оптимизации налогообложения.', 'Полностью знать нюансы того или иного вопроса может только опытный и высококвалифицированный специалист, содержание которого в штате может быть нерентабельно.  Мы обслуживаем различные сферы деятельности, поэтому в штат нашей компании входят высококвалифицированные бухгалтера, причем не только универсалы, которые чаще обычных бухгалтеров сталкиваются с нестандартными ситуациями, но и специалисты узкого профиля – досконально знающие все тонкости конкретного направления.', 'Объемная экспертная поддержка позволяет нам осуществлять всю работу, связанную с бухгалтерским обслуживанием, максимально быстро, но без ущерба для качества.'])
@@ -27,7 +27,7 @@ block content
     section.provider
       .container
         h2.provider__title Занимайтесь бизнесом, а бухгалтерией займемся мы
-        .provider__inner
+        ul.provider__list
           +providerItem('Рассчитаем заработную плату и налоги Ваших сотрудников')
           +providerItem('Систематизируем все Ваши доходы и расходы')
           +providerItem('Соберем бухгалтерский баланс или книгу учета доходов расходов ИП ')
@@ -44,7 +44,7 @@ block content
           span Плюсы&nbsp;
           |работы с нами
         +decorator
-        .pluses__inner
+        ul.pluses__list
           +plusesItem('Стоимость услуг может быть ниже, чем зарплата штатного бухгалтера')
           +plusesItem('Мы постоянно учимся и ежегодно повышаем квалификацию за свой счёт.')
           +plusesItem('Наши услуги застрахованы.')
@@ -58,8 +58,8 @@ block content
     section.fee
       +feeItem('#', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
       +feeItem('#', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
-      +feeItem('#', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
-      +feeItem('#', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
+      +feeItem('service-repair.html', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
+      +feeItem('service-law.html', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
 
     //Consult
     +consult('Нужна консультация?', 'Оставьте свою заявку и мы ответим на все ваши вопросы.')
@@ -86,7 +86,7 @@ block content
     section.features
       .container
         +title('Оцените наши преимущества')
-        .features__inner
+        ul.features__list
           +featuresItem('like', 'Профессионализм', 'Наши специалисты имеют многолетний опыт обслуживания различных сфер деятельности, постоянно проходят курсы повышения квалификации, участвуют в тематических конференциях и семинарах.')
           +featuresItem('avatar', 'Индивидуальный подход', 'Индивидуальный план работ для каждого клиента, бухгалтер всегда на связи.')
           +featuresItem('money', 'Разумная ценовая политика', 'Мы всегда предлагаем самые интересные и адекватные цены.')
@@ -98,7 +98,7 @@ block content
     section.clients
       .container
         +title('Нам уже доверили свою бухгалтерию')
-        .clients__inner
+        ul.clients__list
           +clientsItem('client-1.jpg')
           +clientsItem('client-2.jpg')
           +clientsItem('client-3.jpg')
@@ -117,7 +117,7 @@ block content
       .container
         +title('Работать с нами просто')
         .work__inner
-          .work__content
+          ul.work__list
             +workItem('work-1', '01', 'Свяжитесь с нами любым удобным способом')
             +workItem('work-2', '02', 'Получите консультацию по всем вопросам')
             +workItem('work-3', '03', 'Заключите договор на необходимые услуги')
