--- a/src/css/index/descrip.scss
+++ b/src/css/index/descrip.scss
@@ -10,12 +10,12 @@
   text-align: center;
 }
 
-.descrip__inner {
+.descrip__list {
   display: flex;
   flex-direction: column;
 }
 
-.descrip__wrapper {
+.descrip__item {
   padding: 2rem;
   box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.07);
   border-radius: 20px;
@@ -25,7 +25,7 @@
   }
 }
 
-.descrip__item {
+.descrip__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
