--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -77,7 +77,11 @@ mixin serviceList(arrItems, modif=null)
     for item in arrItems
       li(class= modif)
         .service-list__content
-          +icon('service-list__icon', 'tick')
+          .service-list__icon
+            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M12.612 1.29187H5.38783C2.87033 1.29187 1.29199 3.07437 1.29199 5.59687V12.4035C1.29199 14.926 2.86283 16.7085 5.38783 16.7085H12.6112C15.137 16.7085 16.7087 14.926 16.7087 12.4035V5.59687C16.7087 3.07437 15.137 1.29187 12.612 1.29187Z" stroke="#D5251F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M6.0332 9.00021L8.01154 10.9777L11.9665 7.02271" stroke="#D5251F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
           if item.href
             a(href= `${item.href}.html`)= item.txt
           else
